--- a/backend/garpix_cloudpayments/templates/garpix_cloudpayments/index.html
+++ b/backend/garpix_cloudpayments/templates/garpix_cloudpayments/index.html
@@ -32,6 +32,7 @@
                     alert('success');
                 },
                 onFail: function (reason, options) { // fail
+                    console.log(reason, options, 'reason, options')
                     //действие при неуспешной оплате
                     alert('fail');
                 },
